# advent-2021

./: Cargo.toml  README.md
src/: cli.rs  generate.rs  handler.rs  load_input.rs  main.rs
src/day1/: mod.rs
src/day2/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: mod.rs  notes
src/day8/: mod.rs  notes.md
src/templates/: day_handler.rst  year_mod.rst
src/year2021/: mod.rs
src/year2021/day10/: mod.rs
src/year2021/day11/: mod.rs
src/year2021/day12/: mod.rs
src/year2021/day13/: mod.rs
src/year2021/day3/: mod.rs
src/year2021/day4/: mod.rs
src/year2021/day5/: mod.rs
src/year2021/day6/: mod.rs
src/year2021/day7/: mod.rs
src/year2021/day8/: mod.rs
src/year2021/day9/: mod.rs
src/year2022/: mod.rs
src/year2022/day1/: mod.rs
src/year2022/day2/: mod.rs
src/year2022/day3/: mod.rs
src/year2022/day4/: mod.rs
src/year2022/day5/: command.pest  mod.rs
src/year2022/day6/: mod.rs
src/year2022/day7/: command.pest  mod.rs
src/year2022/day8/: mod.rs
src/year2023/: mod.rs
src/year2023/day1/: mod.rs
src/year2023/day2/: mod.rs
src/year2023/day3/: mod.rs
src/year2023/day4/: mod.rs
src/year2023/day5/: mod.rs
src/year2023/day6/: mod.rs
