[package]
name = "advent-2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.34.0"
ndarray = "0.15.4"
reqwest = { version = "0.11.7", features = ["cookies"] }
tera = "1.15.0"
tokio = { version = "1", features = ["full", "macros"] }